// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getModTypes 1`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
]
`;

exports[`getModTypes 2`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
  {
    "base": "C",
    "strand": "+",
    "type": "h",
  },
]
`;

exports[`getModTypes 3`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "16061",
  },
]
`;
